--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
+
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -304,7 +302,7 @@
         </div>
     </section>
 
-    <!-- Team Section -->
+    <!-- Team Section 
     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -368,7 +366,7 @@
         </div>
     </section>
 
-    <!-- Clients Aside -->
+    <!-- Clients Aside 
     <aside class="clients">
         <div class="container">
             <div class="row">
@@ -401,8 +399,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Contact Me</h2>
+					<br/>
+                  <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>  -->
                 </div>
             </div>
             <div class="row">
