--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/CUMTD.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <p class="text-muted">Data Visulaization</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
