--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <img src="img/portfolio/CUMTD.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
+                        <h4>Storytelling of CU-MTD</h4>
                         <p class="text-muted">Data Visulaization</p>
                     </div>
                 </div>
@@ -154,10 +154,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="MakeUp.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
+                        <h4>Makeup Tutorial Video Website</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
