--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="MakeUp.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/MAKEUP.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Makeup Tutorial Video Website</h4>
