--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/MAKEUP.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/tomato_intro.gif" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Makeup Tutorial Video Website</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Rotten Tomatoes WebCrawler</h4>
+                        <p class="text-muted">Data Analysis</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -174,7 +174,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                    <img src="img/portfolio/treehouse.png" class="img-responsive" alt=""> 
+                    <img src="img/portfolio/tomato_intro.gif" class="img-responsive" alt=""> 
 
                     </a>
                     <div class="portfolio-caption">
@@ -521,9 +521,9 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
+                                <h2>Rotten Tomatoes WebCrawler</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
+                                <img class="img-responsive img-centered" src="img/portfolio/tomato.gif" alt="">
                                 <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
                                 <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
