--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </span>
                     <h4 class="service-heading">Software Engineering</h4>
                     <p class="text-muted">Working Knowledge: Java, Python, SQL, Data Structures</p>
-					<p class="text-muted">Basic Knowledge: C.</p>
+					<p class="text-muted">Basic Knowledge: C</p>
                 </div>
             </div>
         </div>
@@ -528,7 +528,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Rotten Tomatoes WebCrawler</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted">A personal project using python.&nbsp;&nbsp;Date: Spring 2017</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/tomato.gif" alt="">
                                 <p>A program which could search the movies under a tag, show the ranking and create a text file containing popular comments, making an analysis and worldcloud visualization of the comment words’ frequency.</p>
                                 <p>Category: Data Analysis; Data Visualization</p>
@@ -557,7 +557,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Browsing History Timetable</h2>
-                                <p class="item-intro text-muted">A personal project using Python.  Date: Sring 2017</p>
+                                <p class="item-intro text-muted">A personal project using Python.&nbsp;&nbsp;Date: Sring 2017</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/history.png" alt="">
                                 <p>A timetable showing the time, frequency and duration one uses various websites.</p>
                                 <p>Category: Application Development; Data Analysis; Data Visualization</p>
@@ -586,7 +586,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Ubike Station Shortage Map</h2>
-                                <p class="item-intro text-muted">A personal project using python  Date: Spring 2015</p>
+                                <p class="item-intro text-muted">A personal project using python.&nbsp;&nbsp;Date: Spring 2015</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/ubike.png" alt="">
                                 <p>Calculating the bikes in each ubike station in Taipei during a day, plotting the data as scatter and calculating Pearson correlation among them to determine whether the numbers of the bikes placed in each station are reasonable. Showing ubike stations in google map with classified colors indicating how intense the bike shortage of each station is.</p>
                                 <p>Category: Data Analysis; Data Visualization</p>
