--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="intro-lead-in">Welcome To My Studio!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
 	            <div class="team-member">  
-	                <img src="img/team/la.jpg" class="img-responsive img-circle" alt="">
+	                <img src="img/team/la.png" class="img-responsive img-circle" alt="">
 				</div>  
                 <a href="#services" class="page-scroll btn btn-xl">More About Me</a>
             </div>
