--- a/index.html
+++ b/index.html
@@ -91,16 +91,48 @@
 		 </div>
     </header>
 
+    <section id="portfolio" class="bg-gray"> 
+    <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Current Individual Project</h2>
+                        <h3 class="section-subheading text-muted">A SMS application for customers to order food and a website for restaurant owners to manage their restaurants' infomation and menus
+                            <p>Django, Python, HTML, CSS, javascript, sqlite3</p>
+                        </h3>
+                    </div>
+                </div>
+                 <div class="row">
+                    <div class="text-center">
+                    <video height="480" controls autoplay>
+                        <source src="img/portfolio/demo.mov" type="video/mp4">
+                    </video>
+                    <p>
+                    <br>
+                        <a href="https://github.com/Rola1993/mysite_django"> https://github.com/Rola1993/mysite_django </a></p>
+                    </div>
+                </div>
+    </div>
+    </section>
+
     <!-- Services Section -->
     <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Skills</h2>
-                    <h3 class="section-subheading text-muted">I am building my skillset for STAT and CS</h3>
+                    <h3 class="section-subheading text-muted">I am building my skillset for computer programming</h3>
                 </div>
             </div>
             <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Web Development</h4>
+                    <p class="text-muted">Working Knowledge: Django, Python, HTML, CSS, javascript, SQL</p>
+                    <p class="text-muted">Basic Knowledge: UIUX</p>
+                </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -113,20 +145,10 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Development</h4>
-                    <p class="text-muted">Working Knowledge: HTML, javascript, MySQL, UIUX</p>
-					<p class="text-muted">Basic Knowledge: CSS, jQuery</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Software Engineering</h4>
                     <p class="text-muted">Working Knowledge: Java, Python, SQL, Data Structures</p>
-					<p class="text-muted">Basic Knowledge: C</p>
                 </div>
             </div>
         </div>
