--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                  <div class="row">
                     <div class="text-center">
                     <video height="480" controls autoplay>
-                        <source src="img/portfolio/demo.mov" type="video/mp4">
+                        <source src="img/portfolio/demo.mp4" type="video/mp4">
                     </video>
                     <p>
                     <br>
