add website link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Current Individual Project</h2>
+                        <h2 class="section-heading">Ongoing Individual Project</h2>
                         <h3 class="section-subheading text-muted">A SMS application for customers to order food and a website for restaurant owners to manage their restaurants' infomation and menus
                             <p>Django, Python, HTML, CSS, javascript, sqlite3</p>
                         </h3>
@@ -108,7 +108,8 @@
                     </video>
                     <p>
                     <br>
-                        <a href="https://github.com/Rola1993/mysite_django"> https://github.com/Rola1993/mysite_django </a></p>
+                        <a href="http://167.99.161.247">Website: http://167.99.161.247</a></p>
+                        <a href="https://github.com/Rola1993/mysite_django">Github: https://github.com/Rola1993/mysite_django </a></p>
                     </div>
                 </div>
     </div>
