--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </video>
                     <p>
                     <br>
-                        <a href="http://167.99.161.247">Website: http://167.99.161.247</a></p>
+                        <a href="http://167.99.161.247">Website: http://www.mygoodcanteen.com or http://167.99.161.247</a></p>
                         <a href="https://github.com/Rola1993/mysite_django">Github: https://github.com/Rola1993/mysite_django </a></p>
                     </div>
                 </div>
