add links for demo and github

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>CV - Boxed</title>
+	<title>CV - La Luo</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -129,8 +129,10 @@
 				<p>● Designed all HTML and CSS to create a pixel perfect clone of the Slack UI. </p>
 				<br>
 
-				<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;"><a href="https://www.linkedin.com/in/la-luo-637b4a94/">live demo</a><button>
-				<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;"><a href="https://www.linkedin.com/in/la-luo-637b4a94/">github</a><button>
+				<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+					<a href="https://zlack-la.herokuapp.com/#/">live demo</a><button>
+				<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+					<a href="https://github.com/Rola1993/zlack">github</a><button>
 			</div>
 	
 			<!-- p-item -->
@@ -154,9 +156,11 @@
 						<p>● Created game engine in JavaScript and bundled up scripts by Webpack. </p>
 						<br>
 			
-						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;"><a href="https://www.linkedin.com/in/la-luo-637b4a94/">live
+						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+							<a href="http://www.la-luo.com/GalaxyWar/">live
 								demo</a><button>
-						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;"><a href="https://www.linkedin.com/in/la-luo-637b4a94/">github</a><button>
+						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+							<a href="https://github.com/Rola1993/GalaxyWar">github</a><button>
 			</div>
 
 			<!-- p-item -->
@@ -176,9 +180,11 @@
 						<p>● Developed website using Django and configured Memcached for session storage </p>
 						<br>
 
-						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;"><a href="https://www.linkedin.com/in/la-luo-637b4a94/">live
+						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+							<a href="http://www.mygoodcanteen.com">live
 								demo</a><button>
-								<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;"><a href="https://www.linkedin.com/in/la-luo-637b4a94/">github</a><button>
+						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+							<a href="https://github.com/Rola1993/mysite_django">github</a><button>
 			</div>
 
 			<div class="p-item web-design" style="padding-top: 20px;">
