--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<p>React, Rails, Postgres, Heroku</p>
 				<br>
 				<p>● Utilized Redux’s unidirectional data flow with React for predictable state and reliable DOM manipulation.</p>
-				<p>● Applied ActionCable to setup WebSocket connection to rails server and open channel for specific chatroom. </p>
+				<p>● Applied ActionCable for live chat to setup WebSocket connection to rails server and open channel for specific chatroom. </p>
 				<p>● Designed all HTML and CSS to create a pixel perfect clone of the Slack UI. </p>
 				<br>
 
@@ -150,10 +150,11 @@
 			
 				<br>
 				<h5>Tech Stack<h5>
-						<p>React, Rails, Postgres, Heroku</p>
+						<p>JavaScript, HTML5 Canvas</p>
 						<br>
-						<p>● Used HTML Canvas for DOM manipulation and rendering.</p>
-						<p>● Created game engine in JavaScript and bundled up scripts by Webpack. </p>
+						<p>● Utilized HTML5 Canvas and DOM manipulation as a way to efficiently render game’s graphics and create entities.</p>
+						<p>● Crafted the game’s logic using JavaScript and Object-Oriented Programming standards with Webpack as a way to bundle
+						separate game files. </p>
 						<br>
 			
 						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
@@ -176,7 +177,7 @@
 				<h5>Tech Stack<h5>
 						<p>Python/Django, Postgres, DigitalOcean, Nginx</p>
 						<br>
-						<p>● Incorporated Twilio API to develop SMS conversation, Stripe API to proceed payment. </p>
+						<p>● Incorporated Twilio API to develop SMS conversation, Stripe API to proceed payment of customer orders. </p>
 						<p>● Developed website using Django and configured Memcached for session storage </p>
 						<br>
 
@@ -211,7 +212,15 @@
 						</div>
 					</div><!-- col-sm-4 -->
 					<div class="col-sm-8">
-		
+						<div class="experience margin-b-50">
+							<h4><b>BOT Programming Intern</b></h4>
+							<h5 class="font-yellow"><b>Office IQ, Sunnyvale</b></h5>
+							<h6 class="margin-t-10">Oct 2017 - Dec 2017</h6>
+							<p class="font-semi-white margin-tb-30">Built an automation bot using JavaScript that automatically writes and sends HTML payment emails for 70 clients and
+							20 employees. </p>
+						
+						</div><!-- experience -->
+
 						<div class="experience margin-b-50">
 							<h4><b>Operation Intern</b></h4>
 							<h5 class="font-yellow"><b>Unisplendour Corporation Limited, Beijing</b></h5>
