--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
 						<a href="#" data-filter=".web-design"><b>WEB APP</b></a>
 						<a href="#" data-filter=".game"><b>GAME</b></a>
-						<a href="#" data-filter=".graphic-design"><b>DATA VISUALIZATION</b></a>
+						<a href="#" data-filter=".data-visual"><b>DATA VISUALIZATION</b></a>
 					</div><!-- portfolioFilter -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -114,7 +114,7 @@
 				<img src="images/livechat.png" alt=""></a>
 			</div>
 
-			<div class="p-item web-design">
+			<div class="p-item web-design" style="padding-top: 50px;margin-bottom: 40px;">
 				<h3>Zlack | Sole Developer</h3>
 				<br>
 				<p>An app clone of Slack. Users can do live chat, create new channels for all users or form a group chat for selected
@@ -136,13 +136,8 @@
 			</div>
 	
 			<!-- p-item -->
-			<div class="p-item game" style="padding-top: 90px; margin-bottom: 60px;">
-				<a href="images/play.gif" data-fluidbox>
-					<img src="images/play.gif" alt=""></a>
-			</div>
-			
 
-			<div class="p-item game" style="padding-top: 20px;">
+			<div class="p-item game" style="padding-top: 30px;">
 				<h3>Galaxy War | Sole Developer</h3>
 				<br>
 				<p>An app clone of Slack. Users can do live chat, create new channels for all users or form a group chat for selected
@@ -164,8 +159,15 @@
 							<a href="https://github.com/Rola1993/GalaxyWar">github</a><button>
 			</div>
 
+			<div class="p-item game" style="padding-top: 50px;">
+				<a href="images/play.gif" data-fluidbox>
+					<img src="images/play.gif" alt="">
+				</a>
+			</div>
+
+
 			<!-- p-item -->
-			<div class="p-item web-design">
+			<div class="p-item web-design" style="padding-top: 30px;">
 				<a href="images/textToOrder.png" data-fluidbox>
 					<img src="images/textToOrder.png" alt=""></a>
 				<br>
@@ -188,14 +190,44 @@
 							<a href="https://github.com/Rola1993/mysite_django">github</a><button>
 			</div>
 
-			<div class="p-item web-design" style="padding-top: 20px;">
-				<a href="images/homepage.png" data-fluidbox>
+			<div class="p-item web-design" style="padding-top: 20px; padding-left:80px;">
+				<a href="images/texting.gif" data-fluidbox>
 				<img style="height: 600px; width: 350px;" src="images/texting.gif" alt=""></a>
 				
 			</div> 
-			
-			
+
 			<!-- p-item -->
+
+			<div class="p-item web-design" style="padding-top: 20px;">
+				<h3>Wayfarer | Team Developer</h3>
+				<br>
+				<p>An app that utilizes the user's location to find gas stations, hotels, and restaurants that they can reach within a
+				given amount of time.</p>
+			
+				<br>
+				<h5>Tech Stack<h5>
+						<p>React, Node.js, Express, MongoDB, Heroku</p>
+						<br>
+						<p>● Designed Integrated Google Routes API and Places API with HTML5 Geolocation API to find a user’s destination based on
+						their current location.</p>
+						<p>● Leveraged the Google Map API extension eploy.js to partition a long step of the route in order to obtain a more
+						accurate location. </p>
+						<p>● Utilized the Google Map API extension map-icons.js to design and place custom marker on the map for a sleek and
+						improved user interface.</p>
+						<br>
+			
+						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+							<a href="https://boiling-sierra-91034.herokuapp.com/login#/signup">live
+								demo</a><button>
+								<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+									<a href="https://github.com/genxhero/wayfarer">github</a><button>
+			</div>
+
+			<div class="p-item web-design" style="padding-top: 50px;">
+				<a href="images/wayfarer.png" data-fluidbox>
+					<img src="images/wayfarer.png" alt="">
+				</a>
+			</div>
 
 		
 		</div><!-- portfolioContainer -->
