edit link of wayfarer

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 						<br>
 			
 						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
-							<a href="https://boiling-sierra-91034.herokuapp.com/login#/signup">live
+							<a href="https://boiling-sierra-91034.herokuapp.com/#/addvehicle">live
 								demo</a><button>
 								<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
 									<a href="https://github.com/genxhero/wayfarer">github</a><button>
