--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 							
 							<div class="education margin-b-50">
 								<h4><b>University of Illinois, Urbana-Champaign</b></h4>
-								<h5 class="font-yellow"><b>Master in Infotmation Management, School of Information Science</b></h5>
+								<h5 class="font-yellow"><b>Master in Information Management, School of Information Science</b></h5>
 								<h6 class="font-lite-black margin-t-10">GRADUATED IN Jan 2018</h6>
 								<p class="margin-tb-30">Data Science and Analytics pathway. </p>
 							</div><!-- education -->
