--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>Cupertino, CA 95014</h5>
+								<h5>San Francisco, CA</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -43,7 +43,7 @@
 						<div class="info">
 							<i class="icon ion-ios-telephone-outline"></i>
 							<div class="right-area">
-								<h5>408-8068072</h5>
+								<h5>4088068072</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -52,7 +52,7 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h5>rola.uiuc@gmail.com</h5>
+								<h5>laluo.work@gmail.com</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -71,13 +71,13 @@
 						<h2><b>La Luo</b></h2>
 						<h4 class="font-yellow">Software Developer</h4>
 						<ul class="information margin-tb-30">
-							<li><b>Skills : </b>Ruby on Rails, Django/Python, React/Redux</li>
-							<li>jQuery, Postgres, MongoDB</li>
-							<li>Express, Node.js, Java, R</li>
+							<li><b>Skills : </b>Node.js, Express, React/Redux, Django/Python</li>
+							<li>Rails, MongoDB, AWS, Postgres</li>
+							<li>Git, Java, Heroku</li>
 						</ul>
 						<ul class="social-icons">
 							<li><a href="https://www.linkedin.com/in/la-luo-637b4a94/"><i class="ion-social-linkedin"></i></a></li>
-							<li><a href="https://github.com/Rola1993"><i class="ion-social-github"></i></a></li>
+							<li><a href="https://github.com/la-luo"><i class="ion-social-github"></i></a></li>
 						</ul>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
@@ -99,7 +99,6 @@
 						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
 						<a href="#" data-filter=".web-design"><b>WEB APP</b></a>
 						<a href="#" data-filter=".game"><b>GAME</b></a>
-						<a href="#" data-filter=".data-visual"><b>DATA VISUALIZATION</b></a>
 					</div><!-- portfolioFilter -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -168,31 +167,34 @@
 
 			<!-- p-item -->
 			<div class="p-item web-design" style="padding-top: 30px;">
-				<a href="images/textToOrder.png" data-fluidbox>
-					<img src="images/textToOrder.png" alt=""></a>
+				<a href="images/web-recording.gif" data-fluidbox>
+					<img src="images/web-recording.gif" alt=""></a>
 				<br>
 				<h3>TextToOrder | Sole Developer</h3>
 				<br>
-				<p>A SMS app for food ordering and a website for restaurant owners to manage their menus and restaurant information.</p>
+				<p>A app for to customers to purchase via SMS and a website for merchants to manage their menus and information.</p>
 
 				<br>
 				<h5>Tech Stack<h5>
-						<p>Python/Django, Postgres, DigitalOcean, Nginx</p>
+						<p>React/Redux, Node.js, Express, MongoDB, Heroku, Twilio</p>
 						<br>
-						<p>● Incorporated Twilio API to develop SMS conversation, Stripe API to proceed payment of customer orders. </p>
-						<p>● Developed website using Django and configured Memcached for session storage </p>
+						<p>● Twilio webhook routes customer ordering messages to the app backend.​ The app uses a cookie session to track a customer cart. </p>
+						<p>● Merchants can login to edit their info, add/edit/remove items on their menu, publish their menu, and check order history. </p>
+						<p>● It uses VGS to achieve PCI compliant payment flow while being able to charge customer cards with different payment gateways. </p>
 						<br>
 
 						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
-							<a href="http://www.mygoodcanteen.com">live
+							<a href="https://text-to-order.herokuapp.com">live
 								demo</a><button>
 						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
-							<a href="https://github.com/Rola1993/mysite_django">github</a><button>
+							<a href="https://github.com/la-luo/TextToOrder">github</a><button>
+						<button style="background-color:#847490; color: #fff; padding: 5px; margin: 5px; border-radius: 4px;">
+							<a href="https://github.com/la-luo/text-to-order-django">Django version</a><button>
 			</div>
 
 			<div class="p-item web-design" style="padding-top: 20px; padding-left:80px;">
-				<a href="images/texting.gif" data-fluidbox>
-				<img style="height: 600px; width: 350px;" src="images/texting.gif" alt=""></a>
+				<a href="images/sms-recording.gif" data-fluidbox>
+				<img style="height: 600px; width: 350px;" src="images/sms-recording.gif" alt=""></a>
 				
 			</div> 
 
@@ -245,20 +247,13 @@
 					</div><!-- col-sm-4 -->
 					<div class="col-sm-8">
 						<div class="experience margin-b-50">
-							<h4><b>BOT Programming Intern</b></h4>
-							<h5 class="font-yellow"><b>Office IQ, Sunnyvale</b></h5>
-							<h6 class="margin-t-10">Oct 2017 - Dec 2017</h6>
-							<p class="font-semi-white margin-tb-30">Built an automation bot using JavaScript that automatically writes and sends HTML payment emails for 70 clients and
-							20 employees. </p>
-						
-						</div><!-- experience -->
-
-						<div class="experience margin-b-50">
-							<h4><b>Operation Intern</b></h4>
-							<h5 class="font-yellow"><b>Unisplendour Corporation Limited, Beijing</b></h5>
-							<h6 class="margin-t-10">SEPT 2015 - Jan 2016</h6>
-							<p class="font-semi-white margin-tb-30">Managed the database of a startup project. Collected data and analzed it to help optimize the app UI to increase user engagement. </p>
-
+							<h4><b>​Integration Engineer</b></h4>
+							<h5 class="font-yellow"><b>Very Good Security, San Francisco​</b></h5>
+							<h6 class="margin-t-10">Feb 2019 - PRESENT</h6>
+							<p class="font-semi-white margin-tb-30">Implement the company information security service with client and 3rd party API. Setup demo projects for PoC</p>
+							<p class="font-semi-white margin-tb-30">Build data pipeline operation using JavaScript</p>
+							<p class="font-semi-white margin-tb-30">Create internal tools for automation using python</p>
+							<p class="font-semi-white margin-tb-30">Manage Periscope and Redash SQL query</p>
 						</div><!-- experience -->
 		
 					</div><!-- col-sm-8 -->
